--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -139,7 +139,7 @@
             </ol>
 
             <button type="button" class="btabrirmodal" data-toggle="modal" data-target="#myModal">
-                Faça você mesmo
+                Simular Sprint Review
             </button>
 
             <div class="modal" id="myModal">
