--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -104,6 +104,6 @@
             </a>
         </div>
         <div class="próximo">
-            <a class="fontep" href="scrum.html">PRÓXIMO</a>
+            <a href="scrum.html" class="btn" role="button" style="font-weight: 800; font-size: 17px;">PRÓXIMO</a>
         </div>
     </footer>
