--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -111,14 +111,14 @@
     </main>
     <footer>
         <div class="anterior">
-            <a href="artefatos.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;font-weight: 800;"
-             role="button" data-bs-toggle="button">ANTERIOR</a>
+            <a class="btn" href="artefatos.html" style="color:white; font-size: 17px; font-weight: 800;" role="button">ANTERIOR</a>
         </div>
         <div class="soft">
             <a href="home.html" class="home">
-                <img src="imagens/home.png" alt="Home"></img></a>
-            <div class="próximo">                                                                                                                                                                                                                                      
-            <li><a class="fontep" href="po.html">PRÓXIMO</a></li>
+                <img src="imagens/home.png" alt="Home"  style="margin-top: -7%;"></a>
+            </div>
+            <div class="próximo">
+              <a href="po.html"  class="btn" role="button" style="color: black; font-weight: 800; font-size: 17px;">PRÓXIMO</a>
             </div>
         </div>
     </footer>
