--- a/Páginas API/po.html
+++ b/Páginas API/po.html
@@ -107,15 +107,14 @@
     </main>
     <footer>
         <div class="anterior">
-            <a href="master.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;font-weight: 800;" role="button"
-                data-bs-toggle="button">ANTERIOR</a>
+            <a class="btn" href="master.html" style="color:white; font-size: 17px; font-weight: 800;" role="button">ANTERIOR</a>
         </div>
         <div class="soft">
             <a href="home.html" class="home">
-                <img src="imagens/home.png" alt="Home"></img></a>
-            <div class="próximo">
-                <li><a class="fontep" href="softskills.html">PRÓXIMO</a></li>
+                <img src="imagens/home.png" style="margin-top: -7%;" alt="Home"></a>
             </div>
-        </div>
+            <div class="próximo">
+              <a href="softskills.html"  class="btn" role="button" style="color: black; font-weight: 800; font-size: 17px;">PRÓXIMO</a>
+            </div>
     </footer>
 </body>
