--- a/Páginas API/softskills.html
+++ b/Páginas API/softskills.html
@@ -92,16 +92,14 @@
     </main>
     <footer>
         <div class="anterior">
-            <a href="po.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;font-weight: 800;" role="button"
-                data-bs-toggle="button">ANTERIOR</a>
+            <a  href="po.html" class="btn" style="color:white; font-size: 17px; font-weight: 800;" role="button">ANTERIOR</a>
         </div>
         <div class="soft">
             <a href="home.html" class="home">
-                <img src="imagens/home.png" alt="Home"></img>
-            </a>
+                <img src="imagens/home.png" alt="Home"></a>
             <div class="avaliação">
-                <a href="avaliações.html" class="btn" style="color:black; text-decoration: none; font-size: 14px; font-weight: 800;"
-                    role="button" data-bs-toggle="button">REALIZAR AVALIAÇÃO</a>
+                <a href="avaliações.html" class="btn" style="color:black; text-decoration: none; font-size: 16px; font-weight: 800;"
+                    role="button">REALIZAR AVALIAÇÃO</a>
             </div>
         </div>
 </body>
