--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -125,16 +125,14 @@
     </section>
     <footer>
         <div class="anterior">
-            <a href="intro.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;font-weight: 800;" role="button"
-                data-bs-toggle="button">ANTERIOR</a>
+            <a class="btn" href="intro.html" style="color:white; font-size: 17px; font-weight: 800;" role="button">ANTERIOR</a>
         </div>
         <div class="soft">
             <a href="home.html" class="home">
-                <img src="imagens/home.png" alt="Home"></img></a>
-            <div class="próximo">
-                <li><a class="fontep" href="artefatos.html">PRÓXIMO</a></li>
-                </ul>
+                <img src="imagens/home.png" alt="Home" style="margin-top: -7%;"></a>
             </div>
-        </div>
+            <div class="próximo">
+              <a href="artefatos.html" class="btn" role="button" style="color: black; font-weight: 800; font-size: 17px;">PRÓXIMO</a>
+            </div>
     </footer>
 </body>
