--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -54,7 +54,7 @@
     </header>
     <section>
 
-        <h2 id="h2">O QUE É A METODOLOGIA ÁGIL?</h2>
+        <h2 id="metodoagil">O QUE É A METODOLOGIA ÁGIL?</h2>
         <img src="imagens/introimg.png" id="introimg">
         <p>A metodologia ágil é uma forma de gerenciamento de projetos que permite um desenvolvimento
             mais flexível e adaptado. Como o próprio nome sugere, seu principal objetivo é
@@ -69,7 +69,7 @@
 
     <section>
 
-        <h2 id="margin">O QUE VOCÊ ENCONTRARÁ NESSE SITE?</h2>
+        <h2 style="margin-top: 10%;">O QUE VOCÊ ENCONTRARÁ NESSE SITE?</h2>
         <p>Bem-vindo ao nosso site! O spaceline foi desenvolvido com o objetivo de ensinar a metodologia
             ágil de forma didática, proporcionando a todos os interessados um<br>
             conhecimento abrangente sobre o método scrum e sua aplicação prática no ambiente de trabalho.<br>
