--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -54,7 +54,7 @@
     </header>
     <main>
         <section>
-            <h2 id="w">O QUE É?</h2>
+            <h2 id="smaster" class="margin">O QUE É?</h2>
             <img src="imagens/master.jpg" id="img">
             <p>O Scrum Master é o papel de líder responsável por facilitar e garantir o cumprimento dos processos Scrum.
                 No entanto, é importante destacar que o Scrum Master não é um chefe, pois, no Scrum, as equipes são
@@ -62,7 +62,7 @@
                 para que trabalhe de maneira produtiva e sustentável.</p>
         </section>
         <section>
-            <h2 id="margin">FUNÇÕES</h2>
+            <h2 class="margin">FUNÇÕES</h2>
             <ol>
                 <li>Ser um facilitador para o time Scrum: O Master deve facilitar a comunicação entre o Product Owner
                     e o time de desenvolvimento. Essa função deve ser exercida de forma neutra e com boa comunicação,
@@ -82,7 +82,7 @@
             </ol>
         </section>
         <section>
-            <h2>HABILIDADES</h2>
+            <h2 class="margin">HABILIDADES</h2>
             <p>Algumas habilidades essenciais para que você desempenhe um bom papel como Scrum Master são:</p>
             <ol>
                 <li>Boa comunicação: O sucesso da metodologia Scrum depende de um fluxo claro de informações, e como o
