--- a/Páginas API/softskills.html
+++ b/Páginas API/softskills.html
@@ -54,7 +54,7 @@
     </header>
     <main>
         <section>
-            <h2 id="margin8">O QUE SÃO?</h2>
+            <h2 id="sfk" class="margin">O QUE SÃO?</h2>
             <p>Soft skill é o termo utilizado para se referir as habilidades e competências comportamentais de um
                 indivíduo,
                 como este se porta em meio a outros e até mesmo como ele trabalha/lida com suas próprias emoções.
@@ -64,7 +64,7 @@
         </section>
         <img src="./imagens/softskills.png" id="imgsoftskills" alt="softskills">
         <section>
-            <h2 id="margin">DIFERENÇA ENTRE SOFT SKILLS E HARD SKILLS</h2>
+            <h2 class="margin">DIFERENÇA ENTRE SOFT SKILLS E HARD SKILLS</h2>
             <p>Hard Skills são as habilidades técnicas que um indivíduo adquire em sua trajetória profissional através
                 de graduações, cursos e treinamentos.
                 Tudo que o profissional possa mostrar em seu currículo como habilidades adquiridas. Enquanto Soft
@@ -74,7 +74,7 @@
                 principalmente, interpessoal.</p>
         </section>
         <section>
-            <h2 id="margin">COMO DESENVOLVER SOFT SKILLS?</h2>
+            <h2 class="margin">COMO DESENVOLVER SOFT SKILLS?</h2>
             <img src="./imagens/hardesoft.png" id="hardesoftimg">
             <p>Há Soft Skills que já fazem parte da personalidade da pessoa, no entanto o desenvolvimento destas precisa
                 ser aprimorado de maneira contínua e
