--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -56,7 +56,7 @@
     </header>
 
     <section>
-        <h2 id="margin">O QUE SÃO?</h2>
+        <h2 class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">O QUE SÃO?</h2>
         <p>Os artefatos são ferramentas de gerenciamento utilizadas no scrum que além de auxiliarem no
             planejamento também fornecem informações importantes para a equipe e os demais interessados no projeto.
             A seguir, você verá mais detalhadamente sobre cada ferramenta e sua elaboração.
@@ -66,7 +66,7 @@
     <br>
 
     <section>
-        <h2 id="margin3">BACKLOG DO PRODUTO</h2>
+        <h2 id="bkproduto" class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">BACKLOG DO PRODUTO</h2>
         <img src="imagens/backlog.jpg" id="imgartefatos" alt="Backlog">
         <p> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que
             deve ser desenvolvido pela equipe. Esse documento está em constante alteração, passando por redefinições
@@ -74,8 +74,8 @@
             satisfazendo
             as necessidades do cliente.
         </p>
-        <h2>Como montar o Backlog?</h2>
-        <p style="margin-top: -3%;"> O Product Owner deve conversar com o cliente e fazer um levantamento de todos os
+        <h2 class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">Como montar o Backlog?</h2>
+        <p> O Product Owner deve conversar com o cliente e fazer um levantamento de todos os
             requisitos. Após entender a
             visão do produto, as Epics, funcionalidades de maior nível, devem ser identificadas e priorizadas em relação
             as demais tarefas. Depois, essas Epics devem ser divididas em User Story (você entenderá melhor esse
@@ -144,14 +144,14 @@
     <br>
 
     <section>
-        <h2 id="margin4">BURNDOWN</h2>
+        <h2 id="graficobd" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">BURNDOWN</h2>
         <p>O Burndown é um gráfico que representa a relação entre a estimativa para o
             período de conclusão das atividades e o período real de conclusão. Esse artefato permite que o
             grupo tenha uma visão clara sobre o progresso das atividades e as possíveis dificuldades enfrentadas em
             relação
             ao tempo de finalização.</p>
         <img src="imagens/burndown.png" id="burndown" alt="burndown">
-        <h2 id="margin">Como criar um Burndown?</h2>
+        <h2 style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px; margin-top:10%">Como criar um Burndown?</h2>
         <p> Para criar um gráfico de Burndown o Scrum Master deve estimar o esforço necessário para
             concluir cada tarefa da sprint, determinando um limite de tempo. É natural que a diferença entre a linha
             que representa o trabalho real seja diferente da estimativa, afinal, podem existir muitos imprevistos ao
@@ -237,26 +237,23 @@
     <br>
 
     <section>
-        <h2 id="margin5">USER STORY</h2>
+        <h2 id="us" class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">USER STORY</h2>
         <p>São tarefas menores extraídas do backlog que descrevem uma necessidade do usuário a partir do seu próprio
             ponto de
             vista. Geralmente uma User Story segue o seguinte formato: Como [usuário], eu quero a [ação] para
             [benefício].
         </p>
         <div class="userstory">
-            <h3>QUEM?</h3>
-            <p id="qpo">Define quem é o usuário que tem a necessidade.<br>
+            <p>Quem: Define quem é o usuário que tem a necessidade.<br>
                 “QUEM” ajuda a criar no leitor da User Story uma imagem<br>
                 mental desse usuário.</p>
-            <h3 id="h3branco">POR QUE?</h3>
-            <p id="qpo">Define qual o benefício do usuário ao ter<br> a funcionalidade desenvolvida para atender a
+            <p>Por que? : Define qual o benefício do usuário ao ter<br> a funcionalidade desenvolvida para atender a
                 essa necessidade.<br> Em outras palavras, qual o valor direto obtido.</p>
-            <h3>O QUE?</h3>
-            <p id="qpo">Define qual é a necessidade do usuário.<br> Tradicionalmente,
+            <p>O que? : Define qual é a necessidade do usuário.<br> Tradicionalmente,
                 os requisitos do produto são representados<br> apenas por essa parte.</p>
         </div>
 
-        <h2 id="margin">Como fazer uma User Story?</h2>
+        <h2 class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">Como fazer uma User Story?</h2>
         <p>As tarefas devem ser listadas no formato descrito acima e classificadas de acordo com o nível de prioridade.
             Também é necessário que a User Story seja acompanhada por um critério de aceitação, que define o que é
             necessário
@@ -267,7 +264,7 @@
     <br>
 
     <section>
-        <h2 id="margin6">DOR E DOD</h2>
+        <h2 id="dd">DOR E DOD</h2>
         <img src="imagens/dor.png" id="imgdor" alt="DOR">
         <img src="imagens/dod2.jpg" id="imgdod" alt="DOD">
         <p>DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa conter para que possa
@@ -282,7 +279,7 @@
     <br>
 
     <section>
-        <h2 id="margin7">MVP</h2>
+        <h2 id="mvproduto" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;" class="margin">MVP</h2>
         <p>O MVP, Mínimo Produto Viável, é uma versão simplificada do produto que representa uma entrega de valor para o
             cliente. Ou seja,
             o MVP contém as funcionalidades necessárias para resolver o problema do cliente, porém não está completo.
