--- a/Páginas API/po.html
+++ b/Páginas API/po.html
@@ -54,7 +54,7 @@
     </header>
     <main>
         <section>
-            <h2 id="h">O QUE É PRODUCT OWNER?</h2>
+            <h2 id="powner" class="margin">O QUE É PRODUCT OWNER?</h2>
             <img src="imagens/p.o.png" id="img">
             <p>O Product Owner, geralmente abreviado como P.O, é a pessoa responsável por garantir a comunicação entre
                 a equipe de desenvolvimento e os clientes do projeto. Ele define a visão do produto, prioriza as
@@ -64,7 +64,7 @@
         </section>
 
         <section>
-            <h2 id="margin">FUNÇÕES</h2>
+            <h2 class="margin">FUNÇÕES</h2>
             <ol>
                 <li>Gerenciar os clientes: Balancear suas necessidades em relação ao produto, comunicar-se com eles para
                     identificar essas demandas e influencia-las, assim mantendo a colaboração com o projeto maximizada.
@@ -82,7 +82,7 @@
         </section>
 
         <section>
-            <h2>HABILIDADES</h2>
+            <h2 class="margin">HABILIDADES</h2>
             <ol>
                 <li>Capacidade analítica: O P.O deve saber analisar os dados e métricas do produto para tomar decisões
                     coerentes.</li>
