--- a/Páginas API/home.html
+++ b/Páginas API/home.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/f80ad53398.js" crossorigin="anonymous"></script>
     <title>API</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="home.css">
     <link rel="shortcut icon" href="../Logo Spaceline.jpg" type="image/x-icon">
 </head>
-
 <body>
     <header>
         <nav>
@@ -82,15 +82,40 @@
             <li><a href="avaliações.html">Aprender</a></li>
         </ul>
     </section>
-
-    <footer>
-        <p>O conteúdo presente neste site é resultado de um processo de pesquisa, com base em fontes confiáveis e de autoridade reconhecida. <br>Nossa equipe se dedica a fornecer informações precisas, atualizadas e de qualidade, 
-            garantindo a transparência e a credibilidade das informações compartilhadas.<br>Agradecemos a todos os profissionais e fontes que ajudam a enriquecer o conhecimento compartilhado neste espaço.</p>
-        <h3>O conteúdo do site foi feito com base nas seguintes referências:</h3><br>
-        <a href="https://aws.amazon.com/pt/what-is/scrum/">Amazon AWS: O que é scrum?</a><br>
-        <a href="https://scrumguides.org/index.html">Scrumguides: O que é scrum?</a><br>
-        <a href="https://rockcontent.com/br/blog/scrum/">Rockcontent: Aplicação do scrum</a><br>
-        <a href="https://www.flaticon.com/uicons">Flaticon: Icons</a>
-    </footer>
+    <footer style="background-color: #f8f9fa; color: #6c757d; padding: 20px 0; font-size: 14px;">
+        <div style="border-bottom: 1px solid #dee2e6; padding: 10px 0; text-align: center;">
+          <span>Conheça mais projetos: </span>
+          <a href="https://github.com/SPACELINE-API" style="margin-left: 10px; color: #6c757d; text-decoration: none;">
+            <i class="fab fa-github"></i> GitHub
+            </a>
+          </div>
+        <div style="max-width: 1200px; margin: 20px auto; padding: 0 15px; display: flex; flex-wrap: wrap; gap: 20px;">
+          <div style="flex: 1; min-width: 280px;">
+            <h6 style="font-weight: bold; text-transform: uppercase; margin-bottom: 15px;">
+              <img src="imagens/Logo Spaceline.jpg" alt="Logo Spaceline" style="max-width: 100px;">
+                </h6>
+                <p>
+              O conteúdo presente neste site é resultado de um processo de pesquisa, com base em fontes confiáveis e de autoridade reconhecida. <br>
+              Nossa equipe se dedica a fornecer informações precisas, atualizadas e de qualidade, garantindo a transparência e a credibilidade das informações compartilhadas. <br>
+              Agradecemos a todos os profissionais e fontes que ajudam a enriquecer o conhecimento compartilhado neste espaço.
+                </p>
+              </div>
+          <div style="flex: 1; min-width: 280px;">
+            <h6 style="font-weight: bold; text-transform: uppercase; margin-bottom: 15px;">Referências</h6>
+            <p><a href="https://aws.amazon.com/pt/what-is/scrum/" style="color: #6c757d; text-decoration: none;">Amazon AWS: O que é scrum?</a></p>
+            <p><a href="https://scrumguides.org/index.html" style="color: #6c757d; text-decoration: none;">Scrumguides: O que é scrum?</a></p>
+            <p><a href="https://rockcontent.com/br/blog/scrum/" style="color: #6c757d; text-decoration: none;">Rockcontent: Aplicação do scrum</a></p>
+            <p><a href="https://www.flaticon.com/uicons" style="color: #6c757d; text-decoration: none;">Flaticon: Icons</a></p>
+          </div>
+          <div style="flex: 1; min-width: 280px;">
+            <h6 style="font-weight: bold; text-transform: uppercase; margin-bottom: 15px;">Ajuda</h6>
+            <p><a href="#!" style="color: #6c757d; text-decoration: none;">Manual do Usuário</a></p>
+            <h6 style="font-weight: bold; text-transform: uppercase; margin: 30px 0 15px;">Contate-nos</h6>
+            <p><i class="fas fa-envelope" style="margin-right: 10px;"></i>spacelinefatec@gmail.com</p>
+            </div>
+          </div>
+      </footer>
     <script src="search.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
