--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -97,6 +97,10 @@
                 </div>
                 <div class="modal-body">
                   
+                  <p style="font-size:medium; color: black;">Sua tarefa é criar um backlog para o desenvolvimento de um site de loja de roupas. O backlog deve incluir todas as funcionalidades listadas abaixo.
+                    Organize cada funcionalidade de acordo com a prioridade, pensando na experiência do usuário. 
+                  </p>
+
                   <table id="tabela">
                     <tr>
                         <td id="cell1" ondrop="drop(event)" ondragover="allowDrop(event)">Essencial para o produto</td>
@@ -130,6 +134,17 @@
                       <div id="item14" class="drag-item" draggable="true" ondragstart="drag(event)">Implementar um site para suporte em tempo real para os clientes.</div>
                   </div>
               </div>
+
+              <h2 style="margin-top: 30px;">Gabarito:<h2>
+
+                <input type="checkbox" id="toggle">
+
+                <label for="toggle">Clique aqui para conferir</label>
+
+                <div class="content">
+                    <img id="imggabarito" src="imagens/gabarito.png">
+                </div>
+    </div>
       
                 </div>
                 <div class="modal-footer">
