Atualização do modo claro, certificado, feedback, footer, background!

--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../Logo Spaceline.jpg" type="image/x-icon">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -126,7 +128,7 @@
           
                   <div id="items2">
                       <div id="item8" class="drag-item" draggable="true" ondragstart="drag(event)">Permitir que os usuários enviem um feedback sobre o produto.</div>
-                      <div id="item9" class="drag-item" draggable="true" ondragstart="drag(event)">Cadastro de usuário (Login)</div>
+                      <div id="item9" class="drag-item" draggable="true" ondragstart="drag(event)" >Cadastro de usuário (Login)</div>
                       <div id="item10" class="drag-item" draggable="true" ondragstart="drag(event)">Integração com sistema de pagamento para aceitar cartões de crédito.</div>
                       <div id="item11" class="drag-item" draggable="true" ondragstart="drag(event)">Enviar confirmação de pedidos, atualizações e promoções via e-mail.</div>
                       <div id="item12" class="drag-item" draggable="true" ondragstart="drag(event)">Tornar o site responsivo.</div>
@@ -328,5 +330,7 @@
     <script src="backlog.js"></script>
     <script src="burndown.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="tema.js"></script>
 
 </body>
+</html>
