--- a/Páginas API/avaliações.html
+++ b/Páginas API/avaliações.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -543,12 +543,20 @@
         </div>
       </div>
       </div>
+      <div class="resultado">
+        <button id="enviarBtn" class="btn" onclick="enviarRespostas()"><span class="text">Enviar respostas</span></button>
+    </div>
+    
     </section>
   </main>
   <script src="script.js"></script>
+  <script src="tema.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <footer>
     <a href="home.html" class="home">
       <img src="imagens/home.png" alt="Home"></img>
     </a>
   </footer>
+  
 </body>
+</html>
