--- a/Páginas API/po.html
+++ b/Páginas API/po.html
@@ -117,4 +117,7 @@
               <a href="softskills.html"  class="btn" role="button" style="color: black; font-weight: 800; font-size: 17px;">PRÓXIMO</a>
             </div>
     </footer>
+
+    <script src="tema.js"></script>
 </body>
+</html>
