--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -135,4 +135,8 @@
               <a href="artefatos.html" class="btn" role="button" style="color: black; font-weight: 800; font-size: 17px;">PRÓXIMO</a>
             </div>
     </footer>
+
+    <script src="tema.js"></script>
+    
 </body>
+</html>
