--- a/Páginas API/softskills.html
+++ b/Páginas API/softskills.html
@@ -102,4 +102,9 @@
                     role="button">REALIZAR AVALIAÇÃO</a>
             </div>
         </div>
+    </footer>
+
+    <script src="tema.js"></script>
+
 </body>
+</html>
