--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -107,3 +107,7 @@
             <a href="scrum.html" class="btn" role="button" style="font-weight: 800; font-size: 17px;">PRÓXIMO</a>
         </div>
     </footer>
+
+    <script src="tema.js"></script>
+</body>
+</html>
