--- a/Páginas API/home.html
+++ b/Páginas API/home.html
@@ -100,10 +100,7 @@
         
         <div id="footerContent" class="footer-content">
             <div class="footer-column">
-                <h6>
-                    <img src="imagens/Logo Spaceline.jpg" alt="Logo Spaceline">
-                </h6>
-                <p>
+                <p style="text-align: left;">
                     O conteúdo presente neste site é resultado de um processo de pesquisa, com base em fontes confiáveis e de autoridade reconhecida.
                     <br> Nossa equipe se dedica a fornecer informações precisas, atualizadas e de qualidade, garantindo a transparência e a credibilidade das informações compartilhadas.
                     <br> Agradecemos a todos os profissionais e fontes que ajudam a enriquecer o conhecimento compartilhado neste espaço.
@@ -125,6 +122,9 @@
                 <p><i class="fas fa-envelope"></i>spacelinefatec@gmail.com</p>
             </div>
         </div>
+
+        <img id="foxy" src="imagens/raposa.png">
+
     </footer>
         
     <script src="search.js"></script>
