--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -30,25 +30,25 @@
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 <ul class="navbar-nav">
                  <li class="nav-item">
-                  <a class="nav-link" href="intro.html">Introdução</a>
+                  <a class="nav-link" style="color:white;" href="intro.html">Introdução</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="scrum.html">Scrum</a>
+                  <a class="nav-link" style="color:white;"  href="scrum.html">Scrum</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="artefatos.html">Artefatos</a>
+                  <a class="nav-link" style="color:white;"  href="artefatos.html">Artefatos</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="master.html">Scrum Master</a>
+                  <a class="nav-link" style="color:white;"  href="master.html">Scrum Master</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="po.html">Product Owner</a>
+                  <a class="nav-link" style="color:white;"  href="po.html">Product Owner</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="softskills.html">Soft Skills</a>
+                  <a class="nav-link" style="color:white;"  href="softskills.html">Soft Skills</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="avaliações.html">Avaliações</a>
+                  <a class="nav-link" style="color:white;" href="avaliações.html">Avaliações</a>
               </li></ul>
               </div>
             </div>
@@ -70,7 +70,7 @@
     <section>
         <h2 id="bkproduto" class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">BACKLOG DO PRODUTO</h2>
         <img src="imagens/backlog.jpg" id="imgartefatos" alt="Backlog">
-        <p> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que
+        <p style="margin-top: 2%; width: 1200px;"> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que
             deve ser desenvolvido pela equipe. Esse documento está em constante alteração, passando por redefinições
             de prioridade conforme necessário. O Product Owner é o responsável por criar e alterar essa lista,
             satisfazendo
@@ -161,14 +161,14 @@
     <br>
 
     <section>
-        <h2 id="graficobd" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">BURNDOWN</h2>
+        <h2 id="graficobd" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;margin-left: 4%;">BURNDOWN</h2>
         <p>O Burndown é um gráfico que representa a relação entre a estimativa para o
             período de conclusão das atividades e o período real de conclusão. Esse artefato permite que o
             grupo tenha uma visão clara sobre o progresso das atividades e as possíveis dificuldades enfrentadas em
             relação
             ao tempo de finalização.</p>
         <img src="imagens/burndown.png" id="burndown" alt="burndown">
-        <h2 style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px; margin-top:10%">Como criar um Burndown?</h2>
+        <h2 style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px; margin-top:10%; margin-left: 4%;">Como criar um Burndown?</h2>
         <p> Para criar um gráfico de Burndown o Scrum Master deve estimar o esforço necessário para
             concluir cada tarefa da sprint, determinando um limite de tempo. É natural que a diferença entre a linha
             que representa o trabalho real seja diferente da estimativa, afinal, podem existir muitos imprevistos ao
@@ -261,13 +261,13 @@
             [benefício].
         </p>
         <div class="userstory">
-            <p>Quem: Define quem é o usuário que tem a necessidade.<br>
+            <p>Quem: Define quem é o usuário que tem a necessidade.
                 “QUEM” ajuda a criar no leitor da User Story uma imagem<br>
                 mental desse usuário.</p>
-            <p>Por que? : Define qual o benefício do usuário ao ter<br> a funcionalidade desenvolvida para atender a
-                essa necessidade.<br> Em outras palavras, qual o valor direto obtido.</p>
-            <p>O que? : Define qual é a necessidade do usuário.<br> Tradicionalmente,
-                os requisitos do produto são representados<br> apenas por essa parte.</p>
+            <p>Por que? : Define qual o benefício do usuário ao ter a funcionalidade desenvolvida para atender a
+                essa necessidade.Em outras palavras, qual o valor direto obtido.</p>
+            <p>O que? : Define qual é a necessidade do usuário. Tradicionalmente,
+                os requisitos do produto são representados apenas por essa parte.</p>
         </div>
 
         <h2 class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">Como fazer uma User Story?</h2>
@@ -281,10 +281,10 @@
     <br>
 
     <section>
-        <h2 id="dd">DOR E DOD</h2>
+        <h2 id="dd" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px; margin-left: 4%;">DOR E DOD</h2>
         <img src="imagens/dor.png" id="imgdor" alt="DOR">
         <img src="imagens/dod2.jpg" id="imgdod" alt="DOD">
-        <p>DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa conter para que possa
+        <p style="width: 1200px;">DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa conter para que possa
             ser executada
             pelo time. Enquanto DOD, Definition of Done, é a definição daquilo que foi feito. Ambas as ferramentas são
             importantes para
@@ -305,7 +305,7 @@
             produto e validar
             o investimento.</p>
         <img id="mvpimg" src="imagens/mvp.png" alt="mvp">
-        <h2 id="margin">Como fazer o MVP?</h2>
+        <h2 style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px; margin-top: 8%;margin-left: 4%;">Como fazer o MVP?</h2>
         <p>Deve-se considerar a necessidade do cliente, pois mesmo que o MVP seja uma versão incompleta do produto, ele
             deve ter funcionalidades
             suficientes para representar uma entrega de valor. Ou seja, elabore o produto pensando no que o cliente
