--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -50,7 +50,7 @@
             </div>
         </nav>
     <header>
-        <h1>SCRUM MASTER</h1>
+        <h1 style="margin-left: 6%;">SCRUM MASTER</h1>
     </header>
     <main>
         <section>
