--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -106,7 +106,7 @@
             no produto conforme seu próprio estilo de trabalho.</p>
     </section>
     <section>
-        <h2 style="margin-top: 8%;">PROCESSOS</h2>
+        <h2 style="margin-top: 8%;margin-left: 4%;">PROCESSOS</h2>
         <p>Como mencionado anteriormente, o scrum possui ciclos curtos de desenvolvimento denominados
             sprints, que podem durar aproximadamente entre 1 a 4 semanas, onde a equipe de desenvolvimento
             cria versões do produto que são continuamente modificadas e complementadas até a sua
