--- a/Páginas API/softskills.html
+++ b/Páginas API/softskills.html
@@ -50,7 +50,7 @@
             </div>
         </nav>
     <header>
-        <h1>SOFT SKILLS</h1>
+        <h1 style="margin-left: 6%;">SOFT SKILLS</h1>
     </header>
     <main>
         <section>
@@ -100,7 +100,7 @@
             que precisam de evolução.
         </p>
 
-        <button style="background-color: #04AA6d; border: none;" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalSkills">
+        <button style="background-color: #04AA6d; border: none; margin-left: 4%;" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalSkills">
             Realizar teste
           </button>
           
