--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -70,7 +70,7 @@
     <section>
         <h2 id="bkproduto" class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">BACKLOG DO PRODUTO</h2>
         <img src="imagens/backlog.jpg" id="imgartefatos" alt="Backlog">
-        <p style="margin-top: 2%; width: 1200px;"> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que
+        <p> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que
             deve ser desenvolvido pela equipe. Esse documento está em constante alteração, passando por redefinições
             de prioridade conforme necessário. O Product Owner é o responsável por criar e alterar essa lista,
             satisfazendo
@@ -284,7 +284,7 @@
         <h2 id="dd" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px; margin-left: 4%;">DOR E DOD</h2>
         <img src="imagens/dor.png" id="imgdor" alt="DOR">
         <img src="imagens/dod2.jpg" id="imgdod" alt="DOD">
-        <p style="width: 1200px;">DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa conter para que possa
+        <p>DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa conter para que possa
             ser executada
             pelo time. Enquanto DOD, Definition of Done, é a definição daquilo que foi feito. Ambas as ferramentas são
             importantes para
