--- a/Páginas API/avaliações.html
+++ b/Páginas API/avaliações.html
@@ -72,8 +72,7 @@
       <div class="item">
         <div class="imagem"><img src="imagens/angle-circle-right.png"></div>
         <div class="respostas1">
-          <button class="btn" onclick="checkAnswer(this, true)">Hablidade de comunicação, flexibilidade, positividade,
-            capacidade de negociação e resolução de problemas</button>
+          <button class="btn" onclick="checkAnswer(this, true)">Hablidade de comunicação, flexibilidade, positividade e resolução de problemas</button>
         </div>
       </div>
       <div class="item">
