--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -59,8 +59,7 @@
         <p>A metodologia ágil é uma forma de gerenciamento de projetos que permite um desenvolvimento
             mais flexível e adaptado. Como o próprio nome sugere, seu principal objetivo é
             aumentar a agilidade do processo, permitindo uma maior adaptabilidade do produto. Assim, a elaboração do
-            projeto é
-            feita em ciclos
+            projeto é feita em ciclos
             curtos chamados de iterações, que possibilitam um feedback
             contínuo e uma melhoria na qualidade e conformidade das entregas.
             Nas próximas páginas você entenderá mais detalhadamente
