--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -56,14 +56,14 @@
         <section>
             <h2 id="smaster" class="margin">O QUE É?</h2>
             <img src="imagens/master.jpg" id="img">
-            <p>O Scrum Master é o papel de líder responsável por facilitar e garantir o cumprimento dos processos Scrum.
+            <p id="responsividadems">O Scrum Master é o papel de líder responsável por facilitar e garantir o cumprimento dos processos Scrum.
                 No entanto, é importante destacar que o Scrum Master não é um chefe, pois, no Scrum, as equipes são
                 autogerenciáveis. Sua função é guiar a equipe na adoção dos processos e valores do Scrum, apoiando-a
                 para que trabalhe de maneira produtiva e sustentável.</p>
         </section>
         <section>
             <h2 class="margin">FUNÇÕES</h2>
-            <ol>
+            <ol id="responsividade">
                 <li>Ser um facilitador para o time Scrum: O Master deve facilitar a comunicação entre o Product Owner
                     e o time de desenvolvimento. Essa função deve ser exercida de forma neutra e com boa comunicação,
                     para
@@ -83,8 +83,8 @@
         </section>
         <section>
             <h2 class="margin">HABILIDADES</h2>
-            <p>Algumas habilidades essenciais para que você desempenhe um bom papel como Scrum Master são:</p>
-            <ol>
+            <p id="responsividadems">Algumas habilidades essenciais para que você desempenhe um bom papel como Scrum Master são:</p>
+            <ol id="responsividade">
                 <li>Boa comunicação: O sucesso da metodologia Scrum depende de um fluxo claro de informações, e como o
                     Master
                     é o ponto de troca de informações entre equipes é fundamental que ele tenha uma comunicação clara e
