--- a/Páginas API/po.html
+++ b/Páginas API/po.html
@@ -56,7 +56,7 @@
         <section>
             <h2 id="powner" class="margin">O QUE É PRODUCT OWNER?</h2>
             <img src="imagens/p.o.png" id="img">
-            <p>O Product Owner, geralmente abreviado como P.O, é a pessoa responsável por garantir a comunicação entre
+            <p id="responsividadems">O Product Owner, geralmente abreviado como P.O, é a pessoa responsável por garantir a comunicação entre
                 a equipe de desenvolvimento e os clientes do projeto. Ele define a visão do produto, prioriza as
                 funcionalidades e mantém a equipe focada nas necessidades identificadas e na direção solicitada pela
                 organização. É importante que haja apenas um Product Owner dentro da equipe, pois evita conflitos de
@@ -65,7 +65,7 @@
 
         <section>
             <h2 class="margin">FUNÇÕES</h2>
-            <ol>
+            <ol id="responsividade">
                 <li>Gerenciar os clientes: Balancear suas necessidades em relação ao produto, comunicar-se com eles para
                     identificar essas demandas e influencia-las, assim mantendo a colaboração com o projeto maximizada.
                 </li>
@@ -83,7 +83,7 @@
 
         <section>
             <h2 class="margin">HABILIDADES</h2>
-            <ol>
+            <ol id="responsividade">
                 <li>Capacidade analítica: O P.O deve saber analisar os dados e métricas do produto para tomar decisões
                     coerentes.</li>
                 <li>Colaboração: O P.O precisa saber facilitar as discussões com a equipe para que juntos possam chegar
