--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -54,7 +54,7 @@
             </div>
         </nav>
     <header>
-        <h1>ARTEFATOS</h1>
+        <h1 style="margin-left: 4%;">ARTEFATOS</h1>
     </header>
 
     <section>
@@ -70,7 +70,7 @@
     <section>
         <h2 id="bkproduto" class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">BACKLOG DO PRODUTO</h2>
         <img src="imagens/backlog.jpg" id="imgartefatos" alt="Backlog">
-        <p> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que
+        <p id="ajusteresp"> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que
             deve ser desenvolvido pela equipe. Esse documento está em constante alteração, passando por redefinições
             de prioridade conforme necessário. O Product Owner é o responsável por criar e alterar essa lista,
             satisfazendo
