--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -58,7 +58,7 @@
             </div>
         </nav>
     <header>
-        <h1>SCRUM</h1>
+        <h1 style="margin-left: 4%;">SCRUM</h1>
     </header>
 
     <section>
