--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -305,7 +305,7 @@
             produto e validar
             o investimento.</p>
         <img id="mvpimg" src="imagens/mvp.png" alt="mvp">
-        <h2 style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px; margin-top: 8%;margin-left: 4%;">Como fazer o MVP?</h2>
+        <h2 class="margin">Como fazer o MVP?</h2>
         <p>Deve-se considerar a necessidade do cliente, pois mesmo que o MVP seja uma versão incompleta do produto, ele
             deve ter funcionalidades
             suficientes para representar uma entrega de valor. Ou seja, elabore o produto pensando no que o cliente
